chore: Add Quote functionality & corresponding infrastructure layer